      same trove on the same label.
    * Fixed resolveLevel 2 so that it does not try to update packages that
      are already a part of the update. (CNY-886, CNY-780)
    * Fixed resolveLevel 2 so that it does not repeatedly try to perform 
      the same update. (CNY-887)
    * cvc cook | less now leaves less in control of the terminal. (CNY-802)

Changes in 1.0.31:
  o Client Changes:
    * Conary now restarts itself after updating critical conary
      components (currently, that consists of conary).  Hooks have
      been added for other components using the conary api to specify
      other troves as critical.  Also, hooks have been added for other
      components to specify a trove to update last. (CNY-805, CNY-808)
    * Conary now warns the user when they will be causing label
      conflicts - that is when an operation would cause two different
      branches of development for a single trove to end up with the
      same trailing label.  Since most conary operations are label
      based, such label conflicts can be confusing to work with and
      are almost never desireable - except in those few cases where
      they are necessary.  (CNY-796)
    * The conary repository client now retries when a DNS lookup of a
      server hostname fails with a "temporary failure in name
      resolution" error.

  o Optimizations
    * The getFileContents() and getFileVersions() server side calls
      have been optimized for faster execution.
    * The SQL query in getTroveList() has been sped up by a 3-5x factor.
    * dbstore now has support for executemany()
    * Inserts into local database now use executemany().

  o Server Changes
    * Several SQL queries have been updated for PostgreSQL compatibility

  o Build (cvc) Changes:
    * The "cvc add" command no longer assumes files it doesn't know to
      be binary are text files; there are lists for both binary and
      text types, and files which are added which aren't in either